--- a/exercises/02.raw-react/02.problem.nesting/index.html
+++ b/exercises/02.raw-react/02.problem.nesting/index.html
@@ -12,14 +12,14 @@
 			// 	<span>Hello</span> <span>World</span>
 			// </div>
 			const element = createElement(
-				'div',
+				'span',
 				{ className: 'container' },
-				// 🐨 replace the "Hello World" with createElement calls that creates
-				// a span with the text "Hello" and another span with the text "World"
-				// also, you'll need to add a space string (" ") between the spans
-				'Hello World',
+				createElement('span', null, 'Hello'),
+				createElement('span', null, ' '),
+				createElement('span', null, 'World'),
 			)
-
+				console.log('element', element);
+				
 			createRoot(rootElement).render(element)
 		</script>
 
