--- a/exercises/04.components/04.problem.props/index.html
+++ b/exercises/04.components/04.problem.props/index.html
@@ -16,12 +16,14 @@
 			}
 
 			// 🐨 accept the right props in the Calculator component here
-			function Calculator() {
+			function Calculator({ left, right, operator }) {
+				const result = operations[operator](left, right)
 				// 💰 you can get the result with: operations[operator](left, right)
 				return (
 					<div>
 						{/* 🐨 render the equation and its result here */}
 						{/* 💰 open the final version in the app if you're unsure */}
+						{left} {operator} {right} = {result}
 					</div>
 				)
 			}
